--- a/extension.toml
+++ b/extension.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 schema_version = 1
 authors = ["Xiangpeng Hao (adapted from Microsoft's VSCode theme)"]
 description = "A port of Visual Studio Code's Light Modern theme for Zed"
-repository = "https://github.com/microsoft/vscode"
+repository = "https://github.com/XiangpengHao/zed-theme-vscode-light-modern"
