--- a/extension.toml
+++ b/extension.toml
@@ -1,4 +1,4 @@
-id = "vscode-light-modern-theme"
+id = "vscode-light-modern"
 name = "VSCode Light Modern Theme"
 version = "0.1.1"
 schema_version = 1
